[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/sound_controls.gd" type="Script" id=1]
[ext_resource path="res://Audio/footsteps.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/victory.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/hurt.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/vroom.wav" type="AudioStream" id=5]

[node name="SoundHandler" type="Node" index="0"]

script = ExtResource( 1 )

[node name="WalkingSound" type="AudioStreamPlayer" parent="." index="0"]

stream = ExtResource( 2 )
volume_db = -4.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="VictorySound" type="AudioStreamPlayer" parent="." index="1"]

stream = ExtResource( 3 )
volume_db = -14.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="HurtSound" type="AudioStreamPlayer" parent="." index="2"]

stream = ExtResource( 4 )
volume_db = -8.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="DrivingSound" type="AudioStreamPlayer" parent="." index="3"]

stream = ExtResource( 5 )
volume_db = -4.0
autoplay = false
mix_target = 0
bus = "Master"


